# HT-15_hardware

./: .gitignore  .gitmodules
deprecated/: README.MD
deprecated/firmware/: Readme.md  main.c  ui.h
deprecated/firmware_HW_Validation/lib/pico_tlv320_i2s/: CMakeLists.txt  PORTING_NOTES.md  README.md  example.c  pico_tlv320dac3100.c  pico_tlv320dac3100.h
deprecated/firmware_HW_Validation/src/: HT-15_Test.cpp  audio.h  display.c  keypad.cpp  keypad.h  pindefs.h  tlv320aic3100.cpp  tlv320aic3100.h
firmware/: CMakeLists.txt  Readme.md  main.c
firmware/pico_2350/: CMakeLists.txt
firmware_HW_Validation/: CMakeLists.txt  addresses.cpp  default.nix
firmware_HW_Validation/lib/: CMakeLists.txt
firmware_HW_Validation/src/: HT-15_Test.cpp  audio.c  audio.h  display.h  keypad.h  pindefs.cpp  tlv320aic3100.cpp  tlv320aic3100.h
hardware/KiCad Main Board/: OSS Radio Hardware Design.kicad_prl  OSS Radio Hardware Design.kicad_pro
hardware/KiCad Radio Board 2M70CM/: OSS-Radio_2M70CM.csv  OSS-Radio_2M70CM.kicad_pcb  OSS-Radio_2M70CM.kicad_prl  OSS-Radio_2M70CM.kicad_pro  OSS-Radio_2M70CM.kicad_sch  _autosave-OSS-Radio_2M70CM.kicad_pcb  fp-info-cache  fp-lib-table
hardware/KiCad Radio Board 2M70CM/Exports/2M70CM_Rev_0.1/: OSS-Radio_2M70CM-B_Cu.gbr  OSS-Radio_2M70CM-B_Mask.gbr  OSS-Radio_2M70CM-B_Paste.gbr  OSS-Radio_2M70CM-B_Silkscreen.gbr  OSS-Radio_2M70CM-Edge_Cuts.gbr  OSS-Radio_2M70CM-F_Cu.gbr  OSS-Radio_2M70CM-F_Mask.gbr  OSS-Radio_2M70CM-F_Paste.gbr  OSS-Radio_2M70CM-F_Silkscreen.gbr  OSS-Radio_2M70CM-In1_Cu.gbr  OSS-Radio_2M70CM-In2_Cu.gbr  OSS-Radio_2M70CM-NPTH.drl  OSS-Radio_2M70CM-PTH.drl  OSS-Radio_2M70CM-all-pos.csv  OSS-Radio_2M70CM-bom.csv  OSS-Radio_2M70CM-job.gbrjob
hardware/KiCad Radio Board 2M70CM/Exports/2M70CM_Rev_0.2/: OSS-Radio_2M70CM-B_Cu.gbr  OSS-Radio_2M70CM-B_Mask.gbr  OSS-Radio_2M70CM-B_Paste.gbr  OSS-Radio_2M70CM-B_Silkscreen.gbr  OSS-Radio_2M70CM-Edge_Cuts.gbr  OSS-Radio_2M70CM-F_Cu.gbr  OSS-Radio_2M70CM-F_Mask.gbr  OSS-Radio_2M70CM-F_Paste.gbr  OSS-Radio_2M70CM-F_Silkscreen.gbr  OSS-Radio_2M70CM-In1_Cu.gbr  OSS-Radio_2M70CM-In2_Cu.gbr  OSS-Radio_2M70CM-NPTH-drl_map.gbr  OSS-Radio_2M70CM-NPTH.drl  OSS-Radio_2M70CM-PTH-drl_map.gbr  OSS-Radio_2M70CM-PTH.drl  OSS-Radio_2M70CM-all-pos.csv  OSS-Radio_2M70CM-bom.csv  OSS-Radio_2M70CM-job.gbrjob  OSS-Radio_2M70CM.csv
hardware/KiCad Radio Board 2M70CM/Random Files/: .~lock.BOM MOQ Workaround.ods#  BOM MOQ Workaround.ods
