cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# TODO:@Zea as of November 23 2025 THIS IS NOT A RELEASE READY BUILD.
add_compile_options(-Wall -Wextra)
add_compile_options(-fno-aggressive-loop-optimizations)
set(sdkVersion 2.2.0)
set(toolchainVersion 14_2_Rel1)
set(picotoolVersion 2.2.0-a4)
set(PICO_STDIO_USB 1)
set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
set(PICO_BOARD weact_studio_rp2350b_core CACHE STRING "Board type")
include(pico_sdk_import.cmake)
project(Firmware C CXX ASM)
pico_sdk_init()
add_executable(Firmware main.c)
pico_set_program_name(Firmware "Firmware")
pico_set_program_version(Firmware "0.1")
pico_enable_stdio_uart(Firmware 0)
pico_enable_stdio_usb(Firmware 1)
target_link_libraries(Firmware pico_stdlib  pico_multicore hardware_adc hardware_spi hardware_i2c hardware_dma)
target_include_directories(Firmware PRIVATE ${CMAKE_CURRENT_LIST_DIR})
pico_add_extra_outputs(Firmware)

